<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Encryption</string>
    <string name="title_section1">Base64</string>
    <string name="title_section2">MD5</string>
    <string name="title_section3">SHA1</string>
    <string name="title_section4">SHA224</string>
    <string name="title_section5">SHA256</string>
    <string name="title_section6">SHA384</string>
    <string name="title_section7">SHA512</string>
    <string name="title_section8">HmacMD5</string>
    <string name="title_section9">HmacSHA1</string>
    <string name="title_section10">HmacSHA224</string>
    <string name="title_section11">HmacSHA256</string>
    <string name="title_section12">HmacSHA384</string>
    <string name="title_section13">HmacSHA512</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Made by Lugeek</string>
    <string name="hint_miwen">密文</string>
    <string name="hint_mingwen">待加密数据</string>
    <string name="button_jiami">加密️️️</string>
    <string name="button_jiemi">解密</string>
    <string name="hint_miyao">密钥</string>
    <string name="hint_jiemi">解密结果</string>
    <string name="button_initkey">初始化密钥</string>
    <string name="button_initRSAkey">初始化公钥和私钥</string>
    <string name="hint_publickey">公钥</string>
    <string name="hint_privatekey">私钥</string>
    <string name="hint_rsa_publickeyencrypt">公钥加密数据</string>
    <string name="hint_rsa_privatekeydecrypt">私钥解密数据</string>
    <string name="button_rsa_publickeyencrypt">公钥加密</string>
    <string name="button_rsa_privatekeydecrypt">私钥解密</string>
    <string name="hint_rsa_tobesigned">待签名数据</string>
    <string name="hint_rsa_signed">私钥签名</string>
    <string name="hint_rsa_publickeyprove">公钥验证签名结果</string>
    <string name="button_rsa_sign">私钥签名</string>
    <string name="button_rsa_prove">公钥验证</string>

</resources>
