<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/userdataEdit"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/hint_rsa_tobesigned"/>
    <EditText
        android:id="@+id/signedEdit"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/hint_rsa_signed"/>
    <EditText
        android:id="@+id/provedEdit"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/hint_rsa_publickeyprove"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/signButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_rsa_sign"/>
        <Button
            android:id="@+id/proveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_rsa_prove"/>
    </LinearLayout>
</LinearLayout>